removed the old imsge in the my works section and put another with better quality and also fixed the i-build part on smaller screens

--- a/src/index.css
+++ b/src/index.css
@@ -70,6 +70,12 @@ body {
     }
 }
 
+@media (max-width: 300px) {
+    .i-build {
+        font-size: 0.8rem;
+    }
+}
+
 @media (max-width: 1124px) {
     .nav-card {
         display: none;
